fixed gtco-container alignment

--- a/app/css/custom/main.css
+++ b/app/css/custom/main.css
@@ -299,3 +299,7 @@ label {
   left: -10px;
   height: 32px;
 }
+
+.gtco-container {
+ padding-left: 80px !important;
+}
